test/expected/declare_o_plus_iel_i.out
declare + as operator (int, ...) returning int
        ^
9: error: at least 1 parameter of a non-member operator must be an enum, class, struct, or union; or a reference or rvalue reference thereto
